<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.activity.ProfileActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:progressBackgroundTint="@color/fui_buttonShadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        android:src="@drawable/default_profile_image" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cousine_bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="Abhinav Raj" />

    <TextView
        android:id="@+id/profile_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/cousine"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name"
        tools:text="32 Years Old" />

    <TextView
        android:id="@+id/profile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/cousine"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_age"
        tools:text="6352721900" />

    <RelativeLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_number">

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/cousine_bold"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimary"
            android:layout_below="@id/address" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:background="@drawable/light_rounded"
            android:orientation="vertical"
            android:layout_below="@id/line">

            <TextView
                android:id="@+id/address_line_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cousine"
                tools:text="C-101, Aditya Rescideny"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/address_line_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cousine"
                tools:text="Motera, Chandkheda"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/address_line_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cousine"
                tools:text="Opp Sangath Platina"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cousine"
                tools:text="Ahmedabad"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/postal_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cousine"
                tools:text="380005"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/membership_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_layout">

        <TextView
            android:id="@+id/membership"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/cousine_bold"
            android:text="Membership"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimary"
            android:layout_below="@id/membership" />

        <TextView
            android:id="@+id/membership_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_1"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:fontFamily="@font/cousine"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/light_rounded"
            android:text="@string/apply_for_membership" />

    </RelativeLayout>

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded"
        android:fontFamily="@font/cousine_bold"
        android:text="@string/logout"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>